sticky add to cart tweaks for better compatibility with botiga / Quick view horizontal scrolling issue when content is higher

--- a/assets/css/modules/quick-view/quick-view.css
+++ b/assets/css/modules/quick-view/quick-view.css
@@ -322,6 +322,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   grid-gap: 10px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
